# evredis

./: .dockerignore  .drone.yml  .env.sample  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md
config/: evredis-debug.toml  evredis.toml
src/: codecs.rs  lib.rs  protocol.rs  server.rs  storage.rs
src/codecs/: resp2.rs
src/server/: connection.rs
src/storage/: reader.rs  writer.rs
src/utils/: configuration.rs  logging.rs
